src/objects/CentralizedDetails__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Details of radius centralized  email id, contact no and office hours</description>
    <fields>
        <fullName>ContactNo__c</fullName>
        <label>ContactNo</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EmailID__c</fullName>
        <label>EmailID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Operation_Hours__c</fullName>
        <label>Operation Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Centralized Details</label>
</CustomObject>